Prevent NullPointerExceptions in BindDetails toString call.